fix(Toolbar): Arrow positioning overflow

--- a/src/Toolbar/Toolbar.css
+++ b/src/Toolbar/Toolbar.css
@@ -4,10 +4,7 @@
 
 .Toolbar__popper {
   position: absolute;
-}
-
-.Toolbar {
-  padding: var(--Toolbar-tip-size);
+  margin: var(--Toolbar-tip-size);
 }
 
 .Toolbar__content {
@@ -18,9 +15,11 @@
 
 .Toolbar__tip {
   position: absolute;
-  bottom: 0;
+  top: 100%;
   width: var(--Toolbar-tip-size);
   height: var(--Toolbar-tip-size);
-  transform: translateY(-50%) rotate(45deg);
+  margin: var(--Toolbar-tip-size);
+  transform: translateY(calc(-50% + var(--Toolbar-tip-size) * -1)) rotate(45deg);
+  background-color: var(--color-text--shade-2);
   pointer-events: none;
 }
